--- a/public/assets_client/css/style.css
+++ b/public/assets_client/css/style.css
@@ -259,10 +259,12 @@
     position: relative;
     display: inline-block;
     padding: 0 60px;
+    font-size: 30px;
 }
 
 .section-title.text-start h1 {
     padding-left: 0;
+    font-size: 30px;
 }
 
 .section-title h1::before,
@@ -273,18 +275,22 @@
     height: 5px;
     bottom: 0;
     background: var(--dark);
+    font-size: 30px;
 }
 
 .section-title h1::before {
     left: 0;
+    font-size: 30px;
 }
 
 .section-title h1::after {
     right: 0;
+    font-size: 30px;
 }
 
 .section-title.text-start h1::before {
     display: none;
+    font-size: 30px;
 }
 
 
